--- a/Win32/ThreadGetCharactors/z.rc
+++ b/Win32/ThreadGetCharactors/z.rc
@@ -52,25 +52,25 @@ END
 // Dialog
 //
 
-IDD_DIALOG_MAIN DIALOG DISCARDABLE  0, 0, 344, 245
+IDD_DIALOG_MAIN DIALOG DISCARDABLE  0, 0, 236, 170
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "吃字母"
+CAPTION "[吃字母]"
 FONT 10, "System"
 BEGIN
-    LTEXT           "吃货A:",IDC_STATIC,19,80,25,12
-    EDITTEXT        IDC_EDIT_RESOURCE,49,17,265,18,ES_AUTOHSCROLL
-    LTEXT           "资源:",IDC_STATIC,19,20,25,12
-    LTEXT           "缓冲区:",IDC_STATIC,19,45,38,12
-    EDITTEXT        IDC_EDIT_CASH1,51,57,118,15,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_CASH2,189,57,118,15,ES_AUTOHSCROLL
-    LTEXT           "吃货B:",IDC_STATIC,17,117,25,12
-    LTEXT           "吃货C:",IDC_STATIC,18,153,25,12
-    LTEXT           "吃货D:",IDC_STATIC,17,187,25,12
-    EDITTEXT        IDC_EDIT_EATER1,47,79,265,18,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_EATER3,47,150,265,18,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_EATER4,47,182,265,18,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_EATER2,47,110,265,18,ES_AUTOHSCROLL
-    PUSHBUTTON      "Start",IDC_BUTTON_START,259,217,52,15
+    LTEXT           "资源:",IDC_STATIC,14,16,24,13
+    EDITTEXT        IDC_EDIT_RC,40,15,179,12,ES_AUTOHSCROLL
+    LTEXT           "缓冲区:",IDC_STATIC,14,41,33,13
+    EDITTEXT        IDC_EDIT_B1,16,54,99,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_B2,121,54,99,12,ES_AUTOHSCROLL
+    LTEXT           "吃货A:",IDC_STATIC,15,78,26,12
+    LTEXT           "吃货B:",IDC_STATIC,15,96,25,12
+    LTEXT           "吃货C:",IDC_STATIC,15,114,25,12
+    LTEXT           "吃货D:",IDC_STATIC,15,132,26,12
+    EDITTEXT        IDC_EDIT_C1,43,75,177,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_C2,43,93,177,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_C3,43,111,177,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_C4,43,129,177,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "开 始",IDC_BUTTON_BEGIN,190,148,30,12
 END
 
 
@@ -85,9 +85,9 @@ BEGIN
     IDD_DIALOG_MAIN, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 337
+        RIGHTMARGIN, 229
         TOPMARGIN, 7
-        BOTTOMMARGIN, 238
+        BOTTOMMARGIN, 163
     END
 END
 #endif    // APSTUDIO_INVOKED
