--- a/Win32/PETool/PEToolResource.rc
+++ b/Win32/PETool/PEToolResource.rc
@@ -66,6 +66,56 @@ BEGIN
                     WS_BORDER | WS_TABSTOP,13,19,306,83
     CONTROL         "List1",IDC_LIST_MODULE,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,13,108,306,83
+    PUSHBUTTON      "软件加密",IDC_BUTTON_ENCRYPT,349,50,69,18
+    PUSHBUTTON      "DLL注入",IDC_BUTTON_INJECTION,349,76,69,18
+END
+
+IDD_DIALOG_HEADER DIALOG DISCARDABLE  0, 0, 359, 193
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "[PE信息详细查看]"
+FONT 10, "System"
+BEGIN
+    GROUPBOX        "PE头信息",IDC_STATIC,7,20,259,157
+    PUSHBUTTON      "关闭",IDC_BUTTON_PEHEAD_CLOSE,287,27,55,17
+    PUSHBUTTON      "区段",IDC_BUTTON_PEHEAD_SECTION,286,57,55,17
+    PUSHBUTTON      "目录",IDC_BUTTON_HEAD_DIC,286,92,55,17
+    LTEXT           "入口点:",IDC_STATIC,22,35,35,11
+    LTEXT           "代码基址:",IDC_STATIC,23,83,35,11
+    LTEXT           "镜像基址:",IDC_STATIC,23,51,35,11
+    LTEXT           "内存对齐:",IDC_STATIC,23,115,35,11
+    LTEXT           "镜像大小:",IDC_STATIC,23,67,35,11
+    LTEXT           "数据基址:",IDC_STATIC,23,99,35,11
+    LTEXT           "文件对齐:",IDC_STATIC,23,131,35,11
+    LTEXT           "标志字:",IDC_STATIC,23,147,35,11
+    EDITTEXT        IDC_EDIT_PEHEAD_AddressOfEntryPoint,60,35,55,9,
+                    ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEHEAD_FileAlignment,60,131,55,9,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEHEAD_SizeOfImage,60,67,55,9,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEHEAD_BaseOfCode,60,83,55,9,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEHEAD_BaseOfData,60,99,55,9,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEHEAD_SectionAlignment,60,115,55,9,
+                    ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEHEAD_ImageBase,60,51,55,9,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEHEAD_Magic,60,147,55,9,ES_AUTOHSCROLL
+    LTEXT           "子系统:",IDC_STATIC,129,36,35,11
+    LTEXT           "PE头大小:",IDC_STATIC,129,84,35,11
+    LTEXT           "区段数目:",IDC_STATIC,129,52,35,11
+    LTEXT           "校验和:",IDC_STATIC,129,116,35,11
+    LTEXT           "时间戳:",IDC_STATIC,129,68,35,11
+    LTEXT           "特征值:",IDC_STATIC,129,100,35,11
+    LTEXT           "可选PE头大小:",IDC_STATIC,129,132,54,11
+    LTEXT           "目录项数目:",IDC_STATIC,129,148,44,11
+    EDITTEXT        IDC_EDIT_PEHEAD_Subsystem,192,36,55,9,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEHEAD_SizeOfOptionalHeader,192,132,55,9,
+                    ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEHEAD_TimeDateStamp,192,68,55,9,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEHEAD_SizeOfHeaders,192,84,55,9,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEHEAD_Characteristics,192,100,55,9,
+                    ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEHEAD_CheckSum,192,116,55,9,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEHEAD_NumberOfSections,192,52,55,9,
+                    ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_NumberOfRvaAndSizes,192,148,55,9,ES_AUTOHSCROLL
 END
 
 
@@ -83,6 +133,14 @@ BEGIN
         RIGHTMARGIN, 443
         TOPMARGIN, 7
         BOTTOMMARGIN, 198
+    END
+
+    IDD_DIALOG_HEADER, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 352
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 186
     END
 END
 #endif    // APSTUDIO_INVOKED
