--- a/Win32/PETool/PEToolResource.rc
+++ b/Win32/PETool/PEToolResource.rc
@@ -197,8 +197,8 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "[ÏêÏ¸µÄÐÅÏ¢]"
 FONT 10, "System"
 BEGIN
-    CONTROL         "",IDC_RICHEDIT2,"RICHEDIT",ES_AUTOHSCROLL | WS_BORDER | 
-                    WS_TABSTOP,16,23,246,182
+    CONTROL         "",IDC_RICHEDIT1,"RichEdit20A",ES_AUTOHSCROLL | WS_BORDER | 
+                    WS_TABSTOP,13,21,250,201
 END
 
 
