--- a/Win32/PETool/PEToolResource.rc
+++ b/Win32/PETool/PEToolResource.rc
@@ -183,8 +183,8 @@ BEGIN
     LTEXT           "保留:",IDC_STATIC,32,284,32,11
     EDITTEXT        IDC_EDIT_DIC_31,73,284,50,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_DIC_32,132,284,50,12,ES_AUTOHSCROLL
-    PUSHBUTTON      ".....",IDC_BUTTON_DIC_IMPORT,185,47,31,8
-    PUSHBUTTON      ".....",IDC_BUTTON_DIC_EXPORT,185,61,31,8
+    PUSHBUTTON      ".....",IDC_BUTTON_DIC_EXPORT,185,47,31,8
+    PUSHBUTTON      ".....",IDC_BUTTON_DIC_IMPORT,185,61,31,8
     PUSHBUTTON      ".....",IDC_BUTTON_DIC_RESOURSE,185,76,31,8
     PUSHBUTTON      ".....",IDC_BUTTON_DIC_RELOCATION,185,125,31,8
     PUSHBUTTON      ".....",IDC_BUTTON_DIC_BOUND,185,223,31,8
@@ -197,8 +197,8 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "[详细的信息]"
 FONT 10, "System"
 BEGIN
-    CONTROL         "",IDC_RICHEDIT1,"RichEdit20A",ES_AUTOHSCROLL | WS_BORDER | 
-                    WS_TABSTOP,13,21,250,201
+    CONTROL         "",IDC_RICHEDIT1,"RichEdit20A",ES_AUTOHSCROLL | ES_AUTOVSCROLL | WS_BORDER | 
+                    WS_TABSTOP | ES_MULTILINE | WS_VSCROLL | WS_HSCROLL | ES_WANTRETURN,13,21,250,201
 END
 
 
